SERVER-47543 fix hang when hedge read finishes first with MaxTimeMSExpired error